--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,4 +36,4 @@ jobs:
         DOMAIN_NAME: ${{ vars.DOMAIN_NAME }}
         DEBUG: ${{ vars.DEBUG }}
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
-        OPEN_API_KEY: ${{ secrets.OPEN_API_KEY }}
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
