--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Tests
+    - name: Lint
+      run: |
+        ruff check
+    - name: Test
       run: |
         python manage.py collectstatic --noinput
         DEBUG=1 python manage.py test
